[package]
name = "activewebfile-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.0.0-beta.8"
uuid = { version = "1.4.1", features = ["v4"] }
serde = { version = "1.0.130", features = ["derive"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
env_logger = "0.10.0"
log = "0.4.14"
strum_macros = "0.25.2"
strum = { version = "0.25.0", features = ["derive"] }
derive_more = "0.99.11"

